# AUTOComp

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.json  pyproject.toml
comments-export/: english-comments.csv
docs/: architecture.md  kvstudio-11.62-pilot.md  project-tree-inventory.md  remote-worker.md
examples/: glossary.example.json  inventory.example.json  visual-mission.example.json
missions/: kvstudio-program-tree-en.json
prompts/: universal-windows-agent.md
reports/: 04-full-tree-bilingual-catalog.json  05-remaining-cjk-report.json  18-final-local-device-comments-audit.json  20-final-offline-validation.json  PROJECT-STATUS.md  README.md
schemas/: autocomp-translation-batch.schema.json  autocomp-vision-mission.schema.json  start_QWEN3.6-VL-reasoning_OFF___.cmd
scripts/: apply-all-reviewed-rung-spans.py  apply-final-voice-replacements.py  apply-translation-batch.py  audit-remaining-cjk.py  batch-kvstudio-english-import.py  batch-kvstudio-program-properties.py  batch-kvstudio-rung-comment-replace.py  build-device-comment-inventory.py  build-english-device-comments.py  build-english-mirror.py  build-final-voice-replacements.py  build-kvstudio-binary-catalog.py  build-local-device-comment-csvs.py  build-local-device-comment-inventory.py  build-node-context-bundles.py  check-worker-tree.py  configure-worker-ssh.ps1  connect-worker.ps1  extract-kvstudio-full-content.py  fast-bookmark-batch.py  fast-program-comments.py  finish-final-cjk-ui.py  generate-approved-rename-manifest.py  (+21 more)
(+202 files in other folders)
