[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "autocomp"
dynamic = ["version"]
description = "Safe translation automation for user-authored text in KV STUDIO projects"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "AUTOComp maintainers" }]
dependencies = []

[project.optional-dependencies]
windows = [
  "pywinauto>=0.6.9,<0.7",
]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[project.scripts]
autocomp = "autocomp.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "autocomp.__version__" }

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
